<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track Your Smoking</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reporting">Reports</string>
    
    <string name="min_cigarettens_per_day_text_view">Min cigarettes per day</string>
    <string name="max_cigarettens_per_day_text_view">Max cigarettes per day</string>
    
    <string name="price_per_cigarette">Price per cigarette</string>
    
    <string name="month_money_limit">Month money limit</string>
    <string name="pref_month_money_limit_summary">Set your month money limit</string>
    
    <string name="save_settings">Save Settings</string>
    
    <string name="add_cigarette">Another One</string>
    
   
    <string name="smoking_state">Smoking state image</string>
    
     <string name="smoking_activities_list_title">Time/price of smoking</string>
     
     <string name="date_from_btn">Date from</string>
     <string name="date_to_btn">Date to</string>
     <string name="time_from_btn">Time from</string>
     <string name="time_to_btn">Time to</string>
     <string name="exclute_day_of_week_btn">Exclute day of the week</string>
     
     <string name="smoked_cigarettes">cigarette(s) smoked:</string>
     
     <string name="get_report_btn">Show report</string>
     
      <string name="delete_smoking_activity_btn">Delete</string>
     
      <string name="pick_date_btn">Pick date</string>
      
      <string name="time_of_smoking_col_title">Time of smoking</string>
      <string name="price_of_smoking_col_title">Price of smoking</string>
      <string name="delete_of_smoking_col_title">Remove it</string>
      
      <string name="set_date_hint">Set date</string>
      <string name="set_time_hint">Set time</string>
      
      <string name="switch_calendar_on">Hide calendar</string>
      <string name="switch_calendar_off">Show calendar</string>
      
     <string name="pref_initial_settings_category">Initial settings</string>
     <string name="pref_initial_settings_summary">Change your initial settings</string>
     
     <string name="pref_hardware_category">Hardware settings</string>
     <string name="pref_allow_vibration_title">Allow vibration</string>
     <string name="pref_allow_vibration_summary">
         Allow vibration upon certain events like adding cigarette, viewing reports, etc.
     </string>
     
     <string name="pref_allow_sound_effects_title">Allow sound effects</string>
     <string name="pref_allow_sound_effects_summary">
         The funeral march will be playing if you еxcess over your daily limit, just to scre you a little.
     </string>
     
     <string name="pref_notifications_category">Notifications</string>
     <string name="pref_hangout_notification_title">Allow hangout notification</string>
     <string name="pref_hangout_notification_summary">
         A quick acceess icon will be stuck to your bar.
     </string>
     
</resources>
