<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reportsForDatesPeriodScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    
        <TextView
            android:id="@+id/reportTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true" 
            android:gravity="center_horizontal"/>

    
    <RelativeLayout
        android:id="@+id/userInputRelativeLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reportTextView"
        android:paddingBottom="@dimen/activity_vertical_margin"
	  	android:paddingLeft="@dimen/activity_horizontal_margin"
	  	android:paddingRight="@dimen/activity_horizontal_margin"
	  	android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/showReportDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/calendarDatePicker"
        android:text="@string/get_report_btn" />

    <DatePicker
        android:id="@+id/calendarDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendarDateAndTimeReportSwitch"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:spinnersShown="false" />
		
    <LinearLayout
        android:id="@+id/btnsFromToDateLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateToTextView"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/dividerVertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fromDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/date_from_btn" 
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/toDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_to_btn"
            android:background="?android:attr/selectableItemBackground" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsFromToDateLinearLayout"
        android:layout_alignLeft="@+id/btnsFromToDateLinearLayout"
        android:text="@string/set_date_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dateToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnsFromToDateLinearLayout"
        android:text="@string/set_date_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/calendarDateAndTimeReportSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsFromToDateLinearLayout"
        android:textOff="@string/switch_calendar_off"
        android:textOn="@string/switch_calendar_on"
        android:checked="false" />
    
   </RelativeLayout>
   
</RelativeLayout>

</ScrollView>